<resources>
    <string name="app_name">IHS Drone App</string>
    <string name="action_settings">Settings</string>

    <string name="sdk_version">DJI SDK Version: 4.0</string>

    <!-- Main activity UI string -->
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="model_not_available">Model Not Available</string>
    <string name="product_information">Product Information</string>
    <string name="sdk_registration_message">SDK Registration Failed. Please check the bundle ID and your network
        connectivity
    </string>

    <string name="activity_component_list">Component List</string>

    <string name="success">Success</string>

    <!-- Component list -->
    <string name="component_listview_component">Component</string>
    <string name="component_listview_camera">Camera</string>
    <string name="component_listview_gimbal">Gimbal</string>
    <string name="component_listview_flight_controller">Flight Controller</string>
    <string name="component_listview_battery">Battery</string>
    <string name="component_listview_airlink">Air Link</string>
    <string name="component_listview_remote_controller">Remote Controller</string>
    <string name="component_listview_mobile_remote_controller">Mobile Remote Controller</string>
    <string name="component_listview_mission_manager">Mission Manager (Deprecated)</string>
    <string name="component_listview_timeline_mission_control">Timeline Mission Control</string>
    <string name="component_listview_bluetooth">Bluetooth</string>

    <string name="ihs_group_title">IHS Custom Group</string>
    <string name="ihs_page_title">IHS Drone Project</string>

    <string name="component_listview_sdk_4.0">4.0 New Interfaces</string>
    <string name="component_listview_waypoint_mission_operator">New Waypoint Mission Operator</string>
    <string name="component_listview_keyed_interface">Keyed Interface Sample</string>
    <!-- Camera list -->
    <string name="camera_subtitle_general">General</string>
    <string name="camera_listview_push_info">Push Info</string>
    <string name="camera_listview_iso">Set/Get ISO</string>
    <string name="camera_subtitle_shoot_photo">Shoot Photo</string>
    <string name="camera_listview_shoot_single_photo">Shoot Single Photo</string>
    <string name="camera_listview_shoot_interval_photo">Shoot Interval Photo</string>
    <string name="camera_subtitle_record_video">Record Video</string>
    <string name="camera_listview_record_video">Record Video</string>
    <string name="camera_subtitle_playback">Playback</string>
    <string name="camera_listview_playback_push_info">Playback Push Info</string>
    <string name="camera_listview_playback_push_info_description">Playback State Information</string>
    <string name="camera_listview_playback_command">Playback Commands</string>
    <string name="camera_listview_playback_download">Playback Download</string>
    <string name="camera_subtitle_media_download">Media Download</string>
    <string name="camera_listview_download_media">Download Media</string>
    <string name="camera_listview_media_playback">Media Playback</string>
    <string name="moveToPosition">Skip Time</string>

    <!-- Gimbal list -->
    <string name="gimbal_subtitle_rotate_gimbal">Rotate Gimbal</string>
    <string name="gimbal_listview_push_info">Push Info</string>
    <string name="gimbal_listview_rotate_gimbal">Rotate With Speed</string>
    <string name="gimbal_listview_gimbal_capability">Gimbal Capability</string>

    <!-- Battery list -->
    <string name="battery_subtitle">Battery Information</string>
    <string name="battery_listview_push_info">Push Info</string>
    <string name="battery_listview_set_get_discharge_day">Set/Get Discharge Day</string>

    <!-- Remote controller list -->
    <string name="remote_controller_subtitle">Remote Controller Information</string>
    <string name="remote_controller_listview_push_info">Push Info</string>

    <!-- Flight controller list -->
    <string name="flight_controller_subtitle_general">General</string>
    <string name="flight_controller_listview_compass_calibration">Compass Calibration</string>
    <string name="flight_controller_listview_flight_limitation">Flight Limitation</string>
    <string name="flight_controller_subtitle_orientation_mode">Orientation Mode</string>
    <string name="flight_controller_listview_orientation_mode">Orientation Mode</string>
    <string name="flight_controller_subtitle_virtual_stick">Virtual Stick</string>
    <string name="flight_controller_listview_virtual_stick">Virtual Stick</string>
    <string name="flight_controller_subtitle_intelligent_flight_assistant">Intelligent Flight Assistant</string>
    <string name="flight_controller_listview_intelligent_flight_assistant">Intelligent Flight Assistant</string>

    <!-- Airlink list -->
    <string name="airlink_subtitle_wifi_airlink">WiFi Airlink</string>
    <string name="airlink_listview_wifi_set_get_ssid">Set/Get WiFi SSID</string>
    <string name="airlink_listview_wifi_reboot_wifi">Reboot WiFi</string>
    <string name="airlink_subtitle_lb_airlink">Light Bridge Airlink</string>
    <string name="airlink_listview_lb_set_get_channel">Set/Get LBAirlink Channel</string>

    <!--*************** Camera string set ***************-->
    <!-- Shoot Single Photo View -->
    <string name="shoot_single_photo">Shoot Single Photo</string>
    <string name="shoot_single_photo_descritpion">Shoot Single Photo</string>

    <!-- Record Video View -->
    <string name="record_video_start_record">Start Record</string>
    <string name="record_video_stop_record">Stop Record</string>
    <string name="record_video_initial_time">00:00:00</string>

    <!-- Fetch Media View -->
    <string name="fetch_media_view_description">Fetch Media</string>
    <string name="fetch_media_view_fetch_thumbnail">Fetch Thumbnail</string>
    <string name="fetch_media_view_fetch_preview">Fetch Preview</string>
    <string name="fetch_media_view_fetch_media">FetchMedia</string>
    <string name="not_support_mediadownload">This product does not support media download function.</string>
    <string name="support_mediadownload">This product supports media download function.</string>

    <!-- Playback Download View -->
    <string name="playback_download_description">In this mode, you could download the media file using the playback
        mode. The pre-condition is that camera is in the multiple edit mode.
    </string>
    <string name="playback_download_select_0">1st Photo</string>
    <string name="playback_download_select_1">2nd Photo</string>
    <string name="playback_download_download">Download</string>
    <string name="not_support_playback">This product does not support playback function.</string>
    <string name="support_playback">This product supports playback function.</string>

    <!--*************** Gimbal string set ***************-->
    <!-- Move Gimbal In Speed -->
    <string name="move_gimbal_in_speed_up">Up</string>
    <string name="move_gimbal_in_speed_stop">Stop</string>
    <string name="move_gimbal_in_speed_down">Down</string>
    <string name="move_gimbal_in_speed_description">This view will show how to rotate the gimbal in speed. Please set up
        a timer for keeping sending the rotateGimbalBySpeed with specific values and send null, null, null using
        rotateGimbalInSpeed to the aircraft.
    </string>

    <!--*************** Flight controller string set ***************-->
    <!-- Compass Calibration View -->
    <string name="compass_calibration_start_calibration">Start Calibration</string>
    <string name="compass_calibration_stop_calibration">Stop Calibration</string>
    <string name="compass_calibration_description">This view is for calibration. The calibration process includes two
        parts: horizontal calibration and vertical calibration
    </string>

    <string name="flight_limitation_set_height_limitation">Set Height Limitation</string>
    <string name="flight_limitation_toggle_enable_radius_limitation">Limitation ON/OFF</string>
    <string name="flight_limitation_set_radius_limitation">Set Radius Limitation</string>
    <string name="flight_limitation_description">The height limitation is always on, the range of the flight limitation
        is [20, 500]. The range of the radius flight limitation is [15, 500].
    </string>

    <!-- Orientation Mode View -->
    <string name="orientation_mode_description">Current Orientation Mode is</string>
    <string name="orientation_mode_home_lock">Home Lock</string>
    <string name="orientation_mode_course_lock">Course Lock</string>
    <string name="orientation_mode_aircraft_heading">Aircraft Heading</string>

    <string name="intelligent_flight_assistant_description">This view is for Intelligent Flight Assistant.</string>

    <!--*************** Airlink string set ***************-->
    <!-- Set Get LB Airlink Channel View -->
    <string name="set_get_lb_airlink_channel_description">This view will help you understand how to setLBAirlinkChannel.
        Before send setLBAirlinkChannel, the mode of the LB should be in Manual mode. For the auto mode, it will be more
        efficient for the remote control to choose the best channel
    </string>

    <!-- Set Get WiFi Airlink SSID View -->
    <string name="set_get_wifi_airlink_ssid_description">This view will help you understand how to setWiFiAirlinkSSID.
        After setting SSID, Password and frequency, please reboot the WiFi so that it would work immediately.
    </string>

    <!-- Reboot WiFi Airlink View -->
    <string name="reboot_wifi_airlink_description">This view will help you understand how to use the rebootWiFiAirlink.
        After setting SSID, Password and frequency, please reboot the WiFi so that it would work immediately.
    </string>
    <string name="reboot_wifi_airlink_reboot_wifi">Reboot WiFi</string>
    <string name="reboot_wifi_airlink_hint">If you reboot the WiFi, the connection between product and mobile phone
        device might lose.
    </string>


    <!-- media playback -->
    <string name="video_playback_state_push_info">Video playback state</string>
    <string name="Message_Waiting">Please wait...</string>
    <string name="sync_file_title">Sync file</string>
    <string name="sync_success">Sync file success</string>
    <string name="playback_disconnected">Disconnected</string>

    <!-- keyed interface-->
    <string name="component_keyed_interface">key</string>
    <string name="battery_title">Get battery level</string>
    <string name="battery_value">%1$s %</string>
    <string name="camera_title">Switch Camera Mode</string>
    <string name="camera_value">Current Mode: %1$s</string>
    <string name="gps_title">Start Listening</string>
    <string name="gps_value">Lat: %1$s - Long: %2$s</string>
    <string name="exposure_title">Get Exposure Setting</string>
    <string name="exposure_value">%1$s</string>
    <string name="search_for_demo">Search for demo</string>

    <string name="take_off">Take Off</string>
    <string name="land_here">Land Here</string>
    <string name="return_to_home">Return Home and Land</string>
    <string name="circle">Circle Around</string>
    <string name="stopCircle">Stop Circling</string>

</resources>
