<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

    <Button
        android:id="@+id/ihs_take_off_btn"
        android:layout_gravity="center_horizontal"
        android:text="@string/take_off"
        style="@style/common_button"
    />

    <Button
        android:id="@+id/ihs_land_btn"
        android:layout_gravity="center_horizontal"
        android:text="@string/land_here"
        style="@style/common_button"
    />

    <Button
        android:id="@+id/ihs_return_home_btn"
        android:layout_gravity="center_horizontal"
        android:text="@string/return_to_home"
        style="@style/common_button"
    />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/seekerText_title"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Circle Velocity: N/A°/sec\n(N/A secs for full rotation)" />

    <ToggleButton
        android:id="@+id/ihs_circle_btn"
        android:layout_gravity="center_horizontal"
        android:textOff="@string/circle"
        android:textOn="@string/stopCircle"
        style="@style/common_button"
        />

    <com.dji.sdk.sample.internal.view.BaseFpvView
        style="@style/fpv"
        android:layout_marginTop="20dp"
        android:layout_height="200dp" />

</LinearLayout>